fix: overflow hidden on body bc i'm dumb

--- a/app/style/app.scss
+++ b/app/style/app.scss
@@ -3,7 +3,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   font-size: 16px; // used to calculate em
-  overflow: hidden;
 }
 
 // Home route styling
